@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add Top link to smartmobile mailbox page.
 * [mms] Fixes to the iTip Request handler (Bug #11264).
 * [mms] Fix searching in smartmobile view (Bug #11365).
 * [mms] Tweak smartmobile mailbox page to use mobile-style list clicking (Request #11364).
@@ -2660,6 +2661,7 @@
    <date>2012-08-07</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Add Top link to smartmobile mailbox page.
 * [mms] Fixes to the iTip Request handler (Bug #11264).
 * [mms] Fix searching in smartmobile view (Bug #11365).
 * [mms] Tweak smartmobile mailbox page to use mobile-style list clicking (Request #11364).
